--- a/pom.xml
+++ b/pom.xml
@@ -97,9 +97,9 @@
       <version>${io.prometheus.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.eclipse.jetty.ee10</groupId>
-      <artifactId>jetty-ee10-servlet</artifactId>
-      <version>12.1.3</version>
+      <groupId>org.eclipse.jetty</groupId>
+      <artifactId>jetty-servlet</artifactId>
+      <version>11.0.26</version>
     </dependency>
     <dependency>
       <groupId>com.github.ben-manes.caffeine</groupId>
