--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,7 +29,7 @@ jobs:
       run: mvn -B test --file pom.xml
     - name: build
       run: mvn -B package --file pom.xml
-
-    # Upload the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@v4.1.1
+    - uses: actions/upload-artifact@v4
+      with:
+        name: cw.jar
+        path: target/cloudwatch_exporter-0.16.1-SNAPSHOT-jar-with-dependencies.jar
